# rby1-workbench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: AGENT_PROMPT.md  CLAUDE.md  CONVENTIONS.md  DESIGN.md  IMPLEMENTATION.md  PROGRESS.md  ROBOT_CONTROL_REFACTOR_PROPOSAL.md  SETUP.md  TROUBLE_SHOOTINGS.md
examples/: check_robot_status.py  keyboard_control.py  kinematics_snapshot.py  library_viser_joint_control.py  library_visualize_robot.py  realtime_sam3_realsense.py  robot_control_basic.py  robot_quickstart.py
src/rby1_workbench/: __init__.py
src/rby1_workbench/apps/: __init__.py  camera_server.py  found_grasp.py  head_camera_calib.py  realtime_sam3_realsense.py  sam3.py  viser_joint_control_panel.py  visualize_robot.py
src/rby1_workbench/calibration/: __init__.py  charuco_detector.py  hand_eye_solver.py
src/rby1_workbench/conf/: __init__.py  camera_server.yaml  found_grasp.yaml  head_camera_calib.yaml  rby1.yaml  realtime_sam3_realsense.yaml  viser_joint_control_panel.yaml  visualize_robot.yaml
src/rby1_workbench/config/: __init__.py  schema.py
src/rby1_workbench/control/: __init__.py  grasp_execution.py  joint_commands.py  presets.py  rerun_control_viz.py  robot_controller.py  settings.py  streaming.py  target_state.py  viser_joint_control.py
src/rby1_workbench/geometry/: __init__.py  se3.py  transform_graph.py
src/rby1_workbench/perception/: __init__.py  found_grasp_runner.py  realsense.py  realtime_segmentation.py  sam3.py  sam3_runner.py  shm_stream.py  visualizer.py
src/rby1_workbench/robot/: __init__.py  client.py  gripper.py  head.py  (+6 more)
(+4 files in other folders)
