[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rby1-workbench"
version = "0.1.0"
description = "RB-Y1 workbench for visualization, calibration, and control workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "opencv-contrib-python",
    "omegaconf>=2.3",
    "Pillow>=10",
    "pyrealsense2",
    "rerun-sdk>=0.20",
    "rby1-sdk",
    "viser",
    "zmq"
]

[project.scripts]
rby1-camera-server        = "rby1_workbench.apps.camera_server:cli"
rby1-head-camera-calib    = "rby1_workbench.apps.head_camera_calib:cli"
rby1-visualize-robot      = "rby1_workbench.apps.visualize_robot:cli"
rby1-viser-joint-control  = "rby1_workbench.apps.viser_joint_control_panel:cli"
rby1-sam3                 = "rby1_workbench.apps.sam3:cli"
rby1-found-grasp          = "rby1_workbench.apps.found_grasp:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rby1_workbench = ["conf/*.yaml", "conf/**/*.yaml"]
